--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,9 +18,9 @@
   </header>
   <ul class="menu">
     <div class="container _container clearfix">
-      <li class="_text _text-2"><a href="/all">All</a></li>
+      <li class="_text _text-2"><a href="/">All</a></li>
       <li class="_text _text-3"><a href="/3d">3D</a></li>
-      <li class="_text _text-4">Design</li>
+      <li class="_text _text-4"><a href="/design">Design</a></li>
       <li class="_text _text-5">Audio</li>
       <li class="_text _text-6">elettronica</li>
       <li class="_text _text-7">z-test</li>
