--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,12 +5,12 @@
   <meta name="viewport" content="initial-scale=1.0">
   <title>index <%= Time.now %> </title>
   <link href="http://fonts.googleapis.com/css?family=Oswald:300|Bitter:700,400" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/standardize.css">
-  <link rel="stylesheet" href="css/styles.css">
+<!--   <link rel="stylesheet" href="/css/standardize.css"> -->
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="body page-index clearfix">
   <header class="_container _container-1 clearfix">
-    <img class="image image-1" src="images/logo-02(2).svg">
+    <img class="image image-1" src="/images/logo-02(2).svg">
     <div class="text _text text-1">
       <p>"Devi tenere vivo il bambino che è in te:&nbsp;senza di lui non si può creare"</p>
       <p><span>Joni Mitchell</span><br></p>
