usa un singolo articolo al posto di tutti gli articoli nella pagina di dettaglio articolo

--- a/views/article.erb
+++ b/views/article.erb
@@ -2,10 +2,10 @@
   <div class="container _container container-2 clearfix">
    
 
-    <% @articles.each do |article| %>
-      <p><%= article.title %></p>
-      <%= article.content %>
-    <%end%>
+    
+      <p><%= @article.title %></p>
+      <%= @article.content %>
+
 
   </div>
  
