--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,9 +21,9 @@
       <li class="_text _text-2"><a href="/">All</a></li>
       <li class="_text _text-3"><a href="/3d">3D</a></li>
       <li class="_text _text-4"><a href="/design">Design</a></li>
-      <li class="_text _text-5">Audio</li>
-      <li class="_text _text-6">elettronica</li>
-      <li class="_text _text-7">z-test</li>
+      <li class="_text _text-5"><a href="/audio">Audio</a></li>
+      <li class="_text _text-6"><a href="/elettronica">elettronica</a></li>
+      <li class="_text _text-7"><a href="/z_test">z-test</a></li>
     </div>
   </ul>
   <%= yield %>
