tolta visualizzazione estensione .md nel blog, ma non nel link url, da fixare

--- a/views/article.erb
+++ b/views/article.erb
@@ -1,4 +1,4 @@
   <div class="container _container container-2 clearfix">
-      <p><%= @article.title %></p>
+      <p><%= @article.title.delete ".md"  %></p>
       <%= @article.content %>
   </div>
