--- a/views/article.erb
+++ b/views/article.erb
@@ -1,4 +1,4 @@
   <div class="container _container container-2 clearfix">
-      <p><%= @article.title.delete ".md"  %></p>
+      <p><%= @article.better_title  %></p>
       <%= @article.content %>
   </div>
