--- a/public/css/standardize.css
+++ b/public/css/standardize.css
@@ -107,10 +107,7 @@ a:hover {
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
 
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
+
 
 /**
  * Address styling not present in IE 8/9, Safari 5, and Chrome.
@@ -418,7 +415,7 @@ table {
 
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
