--- a/views/article.erb
+++ b/views/article.erb
@@ -1,3 +1,5 @@
+
+<title>prova!! </title>
   <div class="container _container container-2 clearfix">
       <p><%= @article.better_title  %></p>
       <%= @article.content %>
