--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <title>index <%= Time.now %> </title>
+  <title>
+    <% if @article %>
+
+  <%= @article.better_title  %>
+
+    <% elsif params[:category] %>
+
+  <%= params[:category] %>
+
+  <% else %>
+  home
+  <% end %>
+  </title>
   <link href="http://fonts.googleapis.com/css?family=Oswald:300|Bitter:700,400" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/css/standardize.css">
   <link rel="stylesheet" href="/css/styles.css">
